# EngineSO

./: .gitignore  CMakeLists.txt  EngineSO.slnx
assets/shaders/: CameraUBO.slang  DirectLighting.slang  GPULightData.slang  GPUSceneData.slang  LightData.slang  NormalFiltering.slang  PBRBRDF.slang  PushConstants.slang  aces_tone_map.frag.slang  aces_tone_map.vert.slang  basic_geometry.frag  basic_geometry.frag.slang  basic_geometry.vert  basic_geometry.vert.slang  deferred_geometry.frag.slang  deferred_geometry.vert.slang  deferred_lighting.frag.slang  deferred_lighting.vert.slang  final_output.frag.slang  forward_translucency.frag.slang  forward_translucency.vert.slang  gamma_correct.frag.slang  normal_mip.comp.slang  post_process.frag.slang
src/: ImGuiSystem.cpp  ImGuiSystem.ixx  VulkanEngine.cpp  VulkanEngine.ixx  WindowSystem.cpp  WindowSystem.ixx  engine.cpp  engine.ixx  main.cpp
src/Common/: Geometry.ixx
src/Core/: Geometry.ixx  LightData.ixx  MaterialProperties.ixx  Paths.ixx
src/ECS/: CameraComponent.cpp  CameraComponent.ixx  Component.ixx  ComponentTypeIDSystem.ixx  DirectionalLightComponent.ixx  Entity.cpp  Entity.ixx  FlyCameraControllerComponent.cpp  FlyCameraControllerComponent.ixx  LightComponent.ixx  LightComponentBase.ixx  MeshComponent.cpp  MeshComponent.ixx  PhysicsComponent.cpp  PhysicsComponent.ixx  PointLightComponent.ixx  SpotLightComponent.ixx  ThirdPersonControllerComponent.cpp  ThirdPersonControllerComponent.ixx  TransformComponent.cpp  TransformComponent.ixx
src/Events/: CollisionEvent.cpp  CollisionEvent.ixx  CursorCaptureRequestEvent.ixx  EventBase.ixx  EventDispatcher.ixx  EventListener.ixx  EventMacros.h  EventSystem.ixx  KeyEvent.ixx  MouseButtonEvent.ixx  MouseMovedEvent.ixx  MouseScrollEvent.ixx  PostProcessSettingsChangedEvent.ixx  ResourceReprocessedEvent.ixx  SceneBulkChangedEvent.ixx  SceneEntityChangedEvent.ixx  WindowResizeEvent.ixx
src/Geometry/: Geometry.ixx
src/RenderSystems/: CameraUniform.cpp  CameraUniform.ixx  CullingSystem.cpp  CullingSystem.ixx  FrameData.ixx  GBufferDescriptorSet.cpp  GBufferDescriptorSet.ixx  GPULightData.ixx  GPUProfiler.cpp  GPUProfiler.ixx  GPUSceneBuffer.cpp  GPUSceneBuffer.ixx  GPUSceneData.ixx  GeometryRenderPass.cpp  GeometryRenderPass.ixx  LightBuffer.cpp  LightBuffer.ixx  LightingPass.cpp  PipelineCache.cpp  PipelineCache.ixx  PostProcessPass.cpp  PostProcessSettings.ixx  PushConstants.ixx  RenderPassBase.ixx  Renderer.cpp  Renderer.ixx  Rendergraph.cpp  Rendergraph.ixx  SingleTextureDescriptorSet.cpp  SingleTextureDescriptorSet.ixx  VulkanUtils.cpp  VulkanUtils.ixx
src/RenderSystems/RenderPasses/: ForwardTranslucencyPass.cpp  ForwardTranslucencyPass.ixx  GeometryRenderPass.cpp  GeometryRenderPass.ixx  ImGuiRenderPass.cpp  ImGuiRenderPass.ixx  LightingPass.cpp  LightingPass.ixx  PostProcessPass.cpp  PostProcessPass.ixx  PostProcessStepPass.cpp  PostProcessStepPass.ixx  RenderPassBase.ixx
src/ResourceManagement/: AsyncResourceLoader.cpp  AsyncResourceLoader.ixx  HotRealoadResourceManager.cpp  HotReloadResourceManager.ixx  RenderResourceCache.cpp  RenderResourceCache.ixx  ReprocessOptions.ixx  ResourceBase.ixx  ResourceHandle.cpp  ResourceHandle.ixx  ResourceManager.cpp  ResourceManager.ixx  TaskScheduler.cpp  TaskScheduler.ixx
src/ResourceManagement/RenderResourceManagement/: DescriptorHeap.cpp  DescriptorHeap.ixx  PipelineCache.cpp  PipelineCache.ixx  RenderResourceCache.cpp  RenderResourceCache.ixx  SamplerDesc.ixx  TextureSlots.ixx  VulkanUploader.cpp  VulkanUploader.ixx
src/ResourceTypes/: GltfSceneData.cpp  GltfSceneData.ixx  Material.cpp  Material.ixx  Mesh.cpp  Mesh.ixx  MeshData.cpp  MeshData.ixx  ResourceBase.ixx  SceneData.ixx  Shader.cpp  Shader.ixx  ShaderData.cpp  ShaderData.ixx  Texture.cpp  Texture.ixx  TextureData.cpp  TextureData.ixx
src/ResourceTypes/RenderResourceTypes/: Mesh.cpp  Mesh.ixx  Shader.cpp  Shader.ixx  Texture.cpp  Texture.ixx
src/Scene/: Scene.cpp  Scene.ixx
